Jobs page alignment in chrome fix [issue #450]

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -230,7 +230,7 @@ background: linear-gradient(to bottom, #dcdcdc 0%, #e0e0e0 20%, #e8e8e8 40%, #ed
 .search_block{float:left;padding-top:35px;position:absolute;right:0px;width:210px;}
 .search_block h2{font-size:1.5em;color:#4e4e4e;margin:0px;font-weight:bold;padding:7px 5px 7px 14px;}
 .inner_block{border:1px solid #d2d2d2;float:left;padding:14px 22px 20px ;}
-.inner_block div{float:left;margin-right:20px;}
+.inner_block div{float:left;margin-right:20px;width: auto;}
 .inner_block div label{color:#5e5e5e;font-size:1.3em;padding-bottom:6px;float:left;}
 .inner_block div select{font-size:1.2em;color:#5E5E5E;clear:both;width:193px;padding:8px 10px;border:0px none;height:33px;float:left;}
 .inner_block div select option{border:1px solid #d2d2d2;border-top:0px;background:#f8f8f8;color:#4e4e4e;font-size:1.2em;padding:8px 10px;}
